Refactor stream operations, replace Collectors.toList() with toList()
The commit removes the usage of Collectors.toList() throughout the code in the CourseService class and replaces them with the simpler, more modern method, toList(). It simplifies stream operations and improves the readability of the code. It's part of an effort to modernize the code base following the update to a new version of the JDK that supports the toList() method in the Stream interface.